<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.subreddits.subreddits.SubredditsFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/search_edit_text"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginTop="28dp"
            android:layout_marginStart="28dp"
            android:layout_marginEnd="28dp"
            android:imeOptions="actionSearch"
            android:inputType="text"
            android:hint="@string/search"
            android:padding="8dp"
            android:maxLines="1"
            android:background="@drawable/search_edit_text"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:drawableStart="@drawable/search_icon"/>

        <Button
            android:id="@+id/new_button"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="28dp"
            android:background="@android:color/transparent"
            android:textColor="@color/humblr_primary"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/search_edit_text"
            app:layout_constraintEnd_toStartOf="@id/popular_button"
            android:text="@string/newText"/>
        <Button
            android:id="@+id/popular_button"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginEnd="28dp"
            android:background="@android:color/transparent"
            android:textColor="@color/black"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/new_button"
            app:layout_constraintTop_toBottomOf="@id/search_edit_text"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/popularText"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/subreddit_item"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginHorizontal="28dp"
            app:layout_constraintTop_toBottomOf="@+id/new_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>


    <FrameLayout
        android:id="@+id/progress_circular"
        android:layout_width="match_parent"
        android:background="#66000000"
        android:layout_height="match_parent">
        <ProgressBar
            android:layout_gravity="center"
            android:layout_width="96dp"
            android:layout_height="96dp"/>
    </FrameLayout>


</FrameLayout>