<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.subreddits.link.LinkFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_margin="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <Button
                            android:id="@+id/author_button"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:background="@android:color/transparent"
                            android:gravity="center_vertical|start"
                            tools:text="КисКисХ2"
                            android:maxLines="1"
                            android:ellipsize="end"
                            android:layout_weight="1"
                            android:textColor="@color/humblr_primary"
                            android:textAllCaps="false"/>
                        <TextView
                            android:id="@+id/estimated_hours_text"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical"/>
                    </LinearLayout>
                    <TextView
                        android:id="@+id/title_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingVertical="16dp"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        tools:text="Ay what age did you become a home buyer?"/>
                    <TextView
                        android:id="@+id/selftext_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:text="Im 31. Im first generation and I have a decent job as a teacher. I live in a rural community and my older sister who is a single mom and is a secretary was able to build a house years ago (built, brand new on a corner lot). I feel like I missed my opportunity. I wasn’t thinking at the time and now I’m regretting it so so much. Especially now with the housing market. I just want to know I’m not alone 😞"
                        />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:id="@+id/comments_count_text"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:gravity="start|center_vertical"
                            android:layout_weight="1"/>
                        <Button
                            android:id="@+id/share_button"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:background="@android:color/transparent"
                            android:textColor="#80000000"
                            android:text="@string/share"
                            android:textAllCaps="false"/>
                        <TextView
                            android:id="@+id/likes_count_text"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            tools:text="10"
                            android:gravity="center"
                            android:drawablePadding="8dp"
                            app:drawableEndCompat="@drawable/favorite_gray" />
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/comment_item"
                tools:itemCount="4"
                android:layout_marginTop="8dp"
                android:background="@color/white"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/more_responses_text"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:text="@string/more_response"
                android:textColor="@color/humblr_primary"
                android:gravity="center"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                app:drawableEndCompat="@drawable/baseline_arrow_right_alt_24" />

            <Button
                android:id="@+id/show_all_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/account_button_background"
                android:layout_marginTop="8dp"
                android:layout_marginHorizontal="16dp"
                android:textAllCaps="false"
                android:text="@string/show_all"/>
        </LinearLayout>
    </ScrollView>

    <FrameLayout
        android:id="@+id/progress_circular"
        android:layout_width="match_parent"
        android:background="#66000000"
        android:layout_height="match_parent">
        <ProgressBar
            android:layout_gravity="center"
            android:layout_width="96dp"
            android:layout_height="96dp"/>
    </FrameLayout>

</FrameLayout>